tests/baselines/reference/ambientModuleDeclarationWithReservedIdentifierInDottedPath.errors.txt
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(11,1): error TS2304: Cannot find name 'declare'.
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(11,9): error TS2304: Cannot find name 'namespace'.
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(11,19): error TS2819: Namespace name cannot be 'debugger'.
ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts(11,28): error TS1005: ';' expected.


==== ambientModuleDeclarationWithReservedIdentifierInDottedPath.ts (4 errors) ====
    // https://github.com/microsoft/TypeScript/issues/7840
    
    declare namespace chrome.debugger {
        declare var tabId: number;
    }
    
    export const tabId = chrome.debugger.tabId;
    
    declare namespace test.class {}
    
    declare namespace debugger {} // still an error
    ~~~~~~~
!!! error TS2304: Cannot find name 'declare'.
            ~~~~~~~~~
!!! error TS2304: Cannot find name 'namespace'.
                      ~~~~~~~~
!!! error TS2819: Namespace name cannot be 'debugger'.
                               ~
!!! error TS1005: ';' expected.
    